<resources>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Accessibility -->
    <string name="back_button">Back button</string>
    <string name="share_button">Share button</string>
    <string name="support_button">Support button</string>
    <string name="clear_button">Clear button</string>
    <string name="eula_button">EULA button</string>
    <string name="track_image">Track image</string>
    <string name="track_dot">Dot in track meta</string>
    <string name="track_arrow_button">Track arrow button</string>
    <string name="placeholder_image">Placeholder image</string>

    <string name="app_name">Playlist Maker</string>
    <string name="placeholder">Placeholder</string>

    <string name="search">Поиск</string>
    <string name="medialibrary">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="ask_support">Написать в поддержку</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="practicum_android_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="student_email_address">seermakov355@yandex.ru</string>
    <string name="student_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="student_email_title">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history_search">Вы искали</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="play">Играть</string>
    <string name="add_to_favourites">Добавить в любимые</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="zero_time">00:00</string>

    <string name="favourites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="empty_medialibrary">Ничего не нашлось</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
</resources>