<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    style="@style/MainScreenLayoutStyle">

    <FrameLayout
        style="@style/MainHeaderLayoutStyle">

        <TextView
            android:text="@string/app_name"
            android:textColor="@color/yp_white"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/header_padding_bottom"

            style="@style/HeaderStyle" />
    </FrameLayout>

    <LinearLayout
        style="@style/WindowLayoutStyle">

        <Button
            android:id="@+id/search"
            android:text="@string/search"
            app:icon="@drawable/pm_search"

            style="@style/MainButtonStyle"
            />

        <Button
            android:id="@+id/media"
            android:text="@string/medialibrary"
            app:icon="@drawable/pm_library"

            style="@style/MainButtonStyle" />

        <Button
            android:id="@+id/settings"
            android:text="@string/settings"
            app:icon="@drawable/pm_settings"

            style="@style/MainButtonStyle" />

        />

    </LinearLayout>
</LinearLayout>