<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pm_left_arrow"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="55dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size" />

    </FrameLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:orientation="vertical">

        <FrameLayout
            android:paddingVertical="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/list_text_size"
             />

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:layout_gravity="end"
            android:src="@drawable/pm_switch_off"

            />

        </FrameLayout>

        <FrameLayout
            android:paddingVertical="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/list_text_size"
             />

            <ImageView
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size"
                android:layout_gravity="end"
                android:src="@drawable/pm_light_mode"

                />

        </FrameLayout>

        <FrameLayout
            android:paddingVertical="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/ask_support"
            android:textColor="@color/black"
            android:textSize="@dimen/list_text_size"
             />

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:layout_gravity="end"
            android:src="@drawable/pm_support"

            />

    </FrameLayout>

        <FrameLayout
            android:paddingVertical="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"

            android:text="@string/eula"
            android:textColor="@color/black"
            android:textSize="@dimen/list_text_size"
            />

            <ImageView
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size"
                android:layout_gravity="end"
                android:src="@drawable/pm_arrow_forward"

                />

        </FrameLayout>

        />

    </LinearLayout>
</LinearLayout>