<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/MainLayoutStyle"

    tools:ignore="LabelFor">

    <FrameLayout style="@style/MainHeaderLayoutStyle"
        android:padding="4dp">

        <TextView
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="55dp"

            android:text="@string/search" />

    </FrameLayout>

    <LinearLayout
        style="@style/WindowLayoutStyle"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <FrameLayout
            style="@style/SearchLineBoxStyle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_line"
                android:textCursorDrawable="@drawable/cursor"

                style="@style/SearchLineStyle" />

            <ImageView
                android:id="@+id/clear_button"
                style="@style/CloseButtonImageViewStyle"

                android:contentDescription="@string/clear_button" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/search_progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/progress_bar_margin"
            android:indeterminateTint="@color/progress_bar_color"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/placeholder_image"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            android:contentDescription="@string/placeholder_image"
            android:src="@null"
            android:visibility="gone" />

        <TextView
            android:id="@+id/placeholder_message"
            style="@style/PlaceholderTextStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"

            android:gravity="center" />

        <Button
            android:id="@+id/placeholder_update_button"
            style="@style/UpdateButton"
            android:layout_marginTop="16dp"

            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_recycler_view"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/placeholder_history_text"
                style="@style/PlaceholderTextStyle"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/history_search"

                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler_view"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:layout_weight="1"
                android:visibility="gone"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clear_history_button"
                style="@style/UpdateButton"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding"
                android:layout_weight="0"
                android:text="@string/clear_history"
                android:visibility="gone"

                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>